[project]
name = "ml-hse-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "phik>=0.12.4",
    "pydantic>=2.10.2",
    "pyqt5>=5.15.11",
    "pyqt6>=6.7.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.12.0",
]
